--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 		<meta charset="UTF-8">
-		<title>Scrapper Scrapper!!! Scrap All About It </title>
+		<title>Scrapper Scrapper!!! Scrape All About It </title>
 		<!-- Styles -->
 		<!-- <link rel="stylesheet" href="/assets/css/style.css" type="text/css" /> -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
